ecmascript/parser/tests/test262-error-references/fail/f605957c30e125ae.js.stderr
error: Unexpected token `const`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/f605957c30e125ae.js:1:13
  |
1 | while(true) const a
  |             ^^^^^

